<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings" >

    <EditTextPreference
        android:key="servername"
        android:defaultValue="www.ala.sk/androideshop"
        android:summary="@string/servername_summary"
        android:title="@string/servername_title" />

    <EditTextPreference
        android:key="ftpserver"
        android:summary="@string/ftpserver_popis"
        android:title="@string/ftpserver_title" />
    
    <EditTextPreference
        android:key="ftpuser"
        android:summary="@string/ftpuser_popis"
        android:title="@string/ftpuser_title" />
    
    <EditTextPreference
        android:key="ftppsw"
        android:summary="@string/ftppsw_popis"
        android:title="@string/ftppsw_title" />
    
    <EditTextPreference
        android:key="nostnum"
        android:defaultValue="1"
        android:summary="@string/nostnum_summary"
        android:title="@string/nostnum_title" />
    
    <EditTextPreference
        android:key="nostname"
        android:defaultValue="item"
        android:summary="@string/nostname_summary"
        android:title="@string/nostname_title" />
    
    <EditTextPreference
        android:key="nostprice"
        android:defaultValue="1"
        android:summary="@string/nostprice_summary"
        android:title="@string/nostprice_title" />
    
    <EditTextPreference
        android:key="nostvol"
        android:defaultValue="1"
        android:summary="@string/nostvol_summary"
        android:title="@string/nostvol_title" />
    
    <EditTextPreference
        android:key="nostmer"
        android:defaultValue="ks"
        android:summary="@string/nostmer_summary"
        android:title="@string/nostmer_title" />
        
</PreferenceScreen>