<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
      
        <LinearLayout android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">      
 
        <Button android:id="@+id/btnEan"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/btneanx"
        android:layout_weight="1"/>
                 
    	<TextView
    	android:id="@+id/obsahKosika"
	    android:gravity="center"
        android:layout_weight="1"
        android:textSize="17sp"
    	android:visibility="invisible"
    	android:layout_width="match_parent"
    	android:layout_height="60dp" />
    	
    	<Button android:id="@+id/btninfo"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:visibility="invisible"
        android:layout_weight="1"/>
    
     </LinearLayout>
    
    
    <Button android:id="@+id/btnStavean"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisstavean"
        android:layout_marginTop="5dip"/>
    
    <Button android:id="@+id/btnStavcis"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisstavcis"
        android:layout_marginTop="5dip"/>
    
    <Button android:id="@+id/btnStavnat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisstavnat"
        android:layout_marginTop="5dip"/>
    
    <Button android:id="@+id/btnStavhod"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisstavhod"
        android:layout_marginTop="5dip"/>
    
   
 

  			     
</LinearLayout>
