<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
      
        <LinearLayout android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">      
 
        <Button android:id="@+id/btnEan3"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/btneanx"
        android:layout_weight="1"/>
                 
    	<TextView
    	android:id="@+id/obsahKosika"
	    android:gravity="center"
        android:layout_weight="1"
        android:textSize="17sp"
    	android:visibility="invisible"
    	android:layout_width="match_parent"
    	android:layout_height="60dp" />
    	
    	<Button android:id="@+id/btninfo"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:visibility="invisible"
        android:layout_weight="1"/>
    
     </LinearLayout>
    
    
    <Button android:id="@+id/btnCsvstav"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popiscsvstav"
        android:layout_marginTop="5dip"/>
    
    <Button android:id="@+id/btnCsvrozd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popiscsvrozd"
        android:layout_marginTop="5dip"/>
    
    <Button android:id="@+id/btnPrenosstav"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisprenosstav"
        android:layout_marginTop="5dip"/>
    
    <Button android:id="@+id/btnPrenosstavno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisprenosstavno"
        android:layout_marginTop="5dip"/>
    
    
    
    


  			     
</LinearLayout>
