<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" >   

        <TextView
    	android:id="@+id/inputxxx"
    	android:visibility="gone"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content" />
        
        
        
        <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
              
        <Button android:id="@+id/btnRefresh"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtnrefresh" />
        
        <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        

    		<TextView android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/bank"
        	android:paddingLeft="1dp"
        	android:paddingRight="1dp"
        	android:paddingTop="1dp"
        	android:textSize="14sp"       
        	android:layout_weight="0.8"/>
    	
    		<TextView android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/objednavka"
        	android:paddingLeft="1dp"
        	android:paddingRight="1dp"
        	android:paddingTop="1dp"
        	android:textSize="14sp"       
        	android:layout_weight="2.7"/>
    	
    		<TextView android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/sent"
        	android:paddingLeft="1dp"
        	android:paddingRight="1dp"
        	android:paddingTop="1dp"
        	android:layout_gravity="right"
        	android:gravity="right"
        	android:textSize="14sp"       
        	android:layout_weight="1.5"/>

    	</LinearLayout>
                 
        <fragment class="com.eusecom.saminveantory.SeznamSDFragment"
            android:id="@+id/seznam"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    
         </LinearLayout> 

</FrameLayout>