<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout

	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/DrawerLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:elevation="7dp">


	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">


		<include
			android:id="@+id/tool_bar"
			layout="@layout/toolbar_custom">
		</include>

		<Button android:id="@+id/btnEan"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/btnean"
			android:layout_marginTop="15dip"/>

		<Button android:id="@+id/btnEanno"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/btneanno"
			android:layout_marginTop="15dip"/>

		<ImageView
			android:contentDescription="@string/descimg"
			android:id="@+id/eanobr"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:src="@drawable/eaninventory"/>

	</LinearLayout>


	<android.support.v7.widget.RecyclerView
		android:id="@+id/RecyclerView"
		android:layout_width="320dp"
		android:layout_height="match_parent"
		android:layout_gravity="left"

		android:background="#ffffff"
		android:scrollbars="vertical">

	</android.support.v7.widget.RecyclerView>


</android.support.v4.widget.DrawerLayout>