<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
    <TextView
    android:id="@+id/inputEdiUser"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
        
    <TextView
    android:id="@+id/inputEdiServer"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">      
 
        <Button android:id="@+id/btnZfaktur"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtnzfak"
        android:layout_weight="1"/>
    	
    	<Button android:id="@+id/btnZcispoz"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisbtnzcis"
        android:layout_weight="1"/>
    
     </LinearLayout>

	<EditText
    android:id="@+id/inputDesc"
    android:layout_width="fill_parent"
    android:textSize="18sp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:inputType="textMultiLine"
    android:layout_height="180dp"
    android:gravity="top"
    android:padding="5dp">
	</EditText>
 
        
    <!-- Button Save Product -->
    <Button android:id="@+id/btnSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/popiseditsave" />
 

 
</LinearLayout>